--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <span>Experiences</span>
         </div>
 
-        <div class="sppan"> 
+        <div class="sppan">
             <span>Airbnb</span>
             <span>your</span>
             <span>home</span>
@@ -34,9 +34,42 @@
         </div>
     </div>
 
+
     <div class="navbar-2">
-        
+
+        <div class="section-1">
+            <h1>Where</h1>
+            <span>Search destinations</span>
+        </div>
+
+
+        <div class="section-2">
+            <h1>Check in</h1>
+            <span>Add dates</span>
+        </div>
+
+
+        <div class="section-3">
+            <h1>Check out</h1>
+            <span>Add dates</span>
+        </div>
+
+
+        <div class="section-4">
+            <div>
+                <h1>Who</h1>
+                <span>Add guests</span>
+            </div>
+            <i><i class="fa-solid fa-magnifying-glass"></i></i>
+        </div>
+
+
     </div>
+
+<div class="navbar-3">
+
+</div>
+
 </body>
 
 </html>
