--- a/index.html
+++ b/index.html
@@ -66,9 +66,71 @@
 
     </div>
 
-<div class="navbar-3">
+    <div class="navbar-3">
+        
+            <div>
+                <img src="https://a0.muscache.com/im/pictures/mediaverse/category_icon/original/3e5243c8-4d15-4c6b-97e3-7ba2bb7bb880.png"
+                alt="icons">
+                <h1>icons</h1>
+            </div>
+            <div>
+                <img src="https://a0.muscache.com/pictures/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg"
+                alt="icons">
+                <h1>Amazing view</h1>
+            </div>
+            <div>
+                <img src="https://a0.muscache.com/pictures/3fb523a0-b622-4368-8142-b5e03df7549b.jpg"
+                alt="icons">
+                <h1>Amazing pools</h1>
+            </div>
+            <div>
+                <img src="https://a0.muscache.com/pictures/aaa02c2d-9f0d-4c41-878a-68c12ec6c6bd.jpg"
+                alt="icons">
+                <h1>Farms</h1>
+            </div>
+            <div>
+                <img src="https://a0.muscache.com/pictures/7630c83f-96a8-4232-9a10-0398661e2e6f.jpg"
+                alt="icons">
+                <h1>Rooms</h1>
+            </div>
+            <div>
+                <img src="https://a0.muscache.com/pictures/bcd1adc0-5cee-4d7a-85ec-f6730b0f8d0c.jpg"
+                alt="icons">
+                <h1>Beachfront</h1>
+            </div>
+            <div>
+                <img src="https://a0.muscache.com/pictures/677a041d-7264-4c45-bb72-52bff21eb6e8.jpg"
+                alt="icons">
+                <h1>Lakefront</h1>
+            </div>
+            <div>
+                <img src="https://a0.muscache.com/pictures/c5a4f6fc-c92c-4ae8-87dd-57f1ff1b89a6.jpg"
+                alt="icons">
+                <h1>OMG!</h1>
+            </div>
+            <div>
+                <img src="https://a0.muscache.com/pictures/732edad8-3ae0-49a8-a451-29a8010dcc0c.jpg"
+                alt="icons">
+                <h1>Cabins</h1>
+            </div>
+            <div>
+                <img src="https://a0.muscache.com/pictures/6ad4bd95-f086-437d-97e3-14d12155ddfe.jpg"
+                alt="icons">
+                <h1>Countryside</h1>
+            </div>
+            <div>
+                <img src="https://a0.muscache.com/pictures/33dd714a-7b4a-4654-aaf0-f58ea887a688.jpg"
+                alt="icons">
+                <h1>Historical homes</h1>
+            </div>
+            <div>
+                <img src="https://a0.muscache.com/pictures/3271df99-f071-4ecf-9128-eb2d2b1f50f0.jpg"
+                alt="icons">
+                <h1>Tiny homes</h1>
+            </div>
 
-</div>
+        
+    </div>
 
 </body>
 
